[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "enragedsecretnanotechnology"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
rdflib = "^4.2.2"
[tool.poetry.dev-dependencies]
